--- a/Caddyfile
+++ b/Caddyfile
@@ -1,7 +1,7 @@
 https://example.domain {
  root /usr/local/caddy/www/aria2
  timeouts none
- tls kiri_so@outlook.com
+ tls admin@mdzz.fun
  gzip
  proxy /test localhost:1234 {
   websocket
